--- a/src/pretix/control/templates/pretixcontrol/order/change.html
+++ b/src/pretix/control/templates/pretixcontrol/order/change.html
@@ -57,7 +57,7 @@
                 <div class="panel-heading">
                     <h3 class="panel-title">
                         #{{ position.positionid }} –
-                        <strong>{{ position.item.name }}</strong>
+                        <strong>{{ position.item }}</strong>
                         {% if position.variation %}
                             – {{ position.variation }}
                         {% endif %}
