--- a/src/pretix/control/templates/pretixcontrol/order/change_questions.html
+++ b/src/pretix/control/templates/pretixcontrol/order/change_questions.html
@@ -42,7 +42,7 @@
                     <div class="panel-heading">
                         <h4 class="panel-title">
                             <a data-toggle="collapse" href="#cp{{ pos.id }}">
-                                <strong>{{ pos.item.name }}{% if pos.variation %}
+                                <strong>{{ pos.item }}{% if pos.variation %}
                                     – {{ pos.variation }}
                                 {% endif %}</strong>
                                 <i class="fa fa-angle-down collapse-indicator"></i>
