--- a/src/pretix/control/templates/pretixcontrol/order/index.html
+++ b/src/pretix/control/templates/pretixcontrol/order/index.html
@@ -189,7 +189,7 @@
                                 {% else %}
                                     #{{ line.positionid }} –
                                 {% endif %}
-                                <strong>{{ line.item.name }}</strong>
+                                <strong>{{ line.item }}</strong>
                                 {% if line.variation %}
                                     – {{ line.variation }}
                                 {% endif %}
