--- a/src/pretix/control/templates/pretixcontrol/item/index.html
+++ b/src/pretix/control/templates/pretixcontrol/item/index.html
@@ -9,6 +9,9 @@
                 <fieldset>
                     <legend>{% trans "General information" %}</legend>
                     {% bootstrap_field form.name layout="control" %}
+                    <div class="internal-name-wrapper">
+                        {% bootstrap_field form.internal_name layout="control" %}
+                    </div>
                     {% bootstrap_field form.active layout="control" %}
                     {% bootstrap_field form.category layout="control" %}
                     {% bootstrap_field form.admission layout="control" %}
