Improve screenreader accessibility

--- a/src/pretix/static/pretixpresale/scss/_event.scss
+++ b/src/pretix/static/pretixpresale/scss/_event.scss
@@ -50,6 +50,9 @@
             margin: 0;
         }
     }
+    &.variation label {
+        font-weight: normal;
+    }
 }
 .radio .variation-description {
     padding-left: 20px;
