--- a/src/pretix/presale/templates/pretixpresale/event/fragment_cart.html
+++ b/src/pretix/presale/templates/pretixpresale/event/fragment_cart.html
@@ -84,7 +84,7 @@
                         method="post" data-asynctask>
                     {% csrf_token %}
                     <input type="hidden" name="id" value="{{ line.id }}" />
-                    <button class="btn btn-mini btn-link">
+                    <button class="btn btn-mini btn-link" title="{% trans "Remove one" %}">
                         <i class="fa fa-minus"></i>
                     </button>
                 </form>
@@ -106,7 +106,7 @@
                         <input type="hidden" name="price_{{ line.item.id }}"
                                 value="{% if event.settings.display_net_prices %}{{ line.net_price }}{% else %}{{ line.price }}{% endif %}" />
                     {% endif %}
-                    <button class="btn btn-mini btn-link">
+                    <button class="btn btn-mini btn-link" title="{% trans "Add one more" %}">
                         <i class="fa fa-plus"></i>
                     </button>
                 </form>
