--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -273,7 +273,9 @@
                                         {% for var in item.available_variations %}
                                             <div class="row-fluid product-row variation">
                                                 <div class="col-md-8 col-xs-12">
-                                                    {{ var }}
+                                                    <label for="variation_{{ item.pk }}_{{ var.pk }}">
+                                                        {{ var }}
+                                                    </label>
                                                     {% if var.description %}
                                                         <div class="variation-description">
                                                             {{ var.description|localize|rich_text }}
@@ -291,6 +293,7 @@
                                                                     placeholder="0"
                                                                     min="{% if event.settings.display_net_prices %}{{ var.display_price.net|money_numberfield:event.currency }}{% else %}{{ var.display_price.gross|money_numberfield:event.currency }}{% endif %}"
                                                                     name="price_{{ item.id }}_{{ var.id }}"
+                                                                    title="{% blocktrans trimmed with item=var.value %}Modify price for {{ item }}{% endblocktrans %}"
                                                                     step="any"
                                                                     value="{% if event.settings.display_net_prices %}{{var.display_price.net|money_numberfield:event.currency }}{% else %}{{ var.display_price.gross|money_numberfield:event.currency }}{% endif %}"
                                                             >
@@ -323,12 +326,14 @@
                                                         {% if item.max_per_order == 1 %}
                                                             <label class="item-checkbox-label">
                                                                 <input type="checkbox" value="1"
+                                                                        id="variation_{{ item.id }}_{{ var.id }}"
                                                                         name="variation_{{ item.id }}_{{ var.id }}">
                                                             </label>
                                                         {% else %}
                                                             <input type="number" class="form-control input-item-count" placeholder="0" min="0"
                                                                     max="{{ var.order_max }}"
                                                                     pattern="\d*"
+                                                                    id="variation_{{ item.id }}_{{ var.id }}"
                                                                     name="variation_{{ item.id }}_{{ var.id }}">
                                                         {% endif %}
                                                     </div>
@@ -353,7 +358,7 @@
                                             </a>
                                         {% endif %}
                                         <div class="product-description {% if item.picture %}with-picture{% endif %}">
-                                            <strong>{{ item.name }}</strong>
+                                            <label for="item_{{ item.pk }}"><strong>{{ item.name }}</strong></label>
                                             {% if item.description %}
                                                 <div class="product-description">
                                                     {{ item.description|localize|rich_text }}
@@ -380,6 +385,7 @@
                                                 <input type="number" class="form-control input-item-price" placeholder="0"
                                                         min="{% if event.settings.display_net_prices %}{{ item.display_price.net|money_numberfield:event.currency }}{% else %}{{ item.display_price.gross|money_numberfield:event.currency }}{% endif %}"
                                                         name="price_{{ item.id }}"
+                                                        title="{% blocktrans trimmed with item=item.name %}Modify price for {{ item }}{% endblocktrans %}"
                                                         value="{% if event.settings.display_net_prices %}{{item.display_price.net|money_numberfield:event.currency }}{% else %}{{ item.display_price.gross|money_numberfield:event.currency }}{% endif %}"
                                                         step="any">
                                             </div>
@@ -411,12 +417,14 @@
                                             {% if item.max_per_order == 1 %}
                                                 <label class="item-checkbox-label">
                                                     <input type="checkbox" value="1" {% if itemnum == 1 %}checked{% endif %}
-                                                            name="item_{{ item.id }}">
+                                                            name="item_{{ item.id }}" id="item_{{ item.id }}">
                                                 </label>
                                             {% else %}
                                                 <input type="number" class="form-control input-item-count" placeholder="0" min="0"
                                                         pattern="\d*" {% if itemnum == 1 %}value="1"{% endif %}
-                                                        max="{{ item.order_max }}" name="item_{{ item.id }}">
+                                                        max="{{ item.order_max }}"
+                                                        name="item_{{ item.id }}"
+                                                        id="item_{{ item.id }}">
                                             {% endif %}
                                         </div>
                                     {% else %}
