--- a/src/pretix/presale/templates/pretixpresale/event/voucher.html
+++ b/src/pretix/presale/templates/pretixpresale/event/voucher.html
@@ -47,7 +47,9 @@
                                             </a>
                                         {% endif %}
                                         <div class="product-description {% if item.picture %}with-picture{% endif %}">
-                                            <strong>{{ item.name }}</strong>
+                                            <h4>
+                                                {{ item.name }}
+                                            </h4>
                                             {% if item.description %}
                                                 <div class="product-description">
                                                     {{ item.description|localize|rich_text }}
@@ -74,9 +76,11 @@
                                     {% for var in item.available_variations %}
                                         <div class="row-fluid product-row variation">
                                             <div class="col-md-8 col-xs-12">
-                                                <label for="variation_{{ item.id }}_{{ var.id }}">
-                                                    {{ var }}
-                                                </label>
+                                                <h5>
+                                                    <label for="variation_{{ item.id }}_{{ var.id }}">
+                                                        {{ var }}
+                                                    </label>
+                                                </h5>
                                                 {% if var.description %}
                                                     <div class="variation-description">
                                                         {{ var.description|localize|rich_text }}
@@ -150,7 +154,9 @@
                                         </a>
                                     {% endif %}
                                     <div class="product-description {% if item.picture %}with-picture{% endif %}">
-                                        <label for="item_{{ item.id }}"><strong>{{ item.name }}</strong></label>
+                                        <h4>
+                                            <label for="item_{{ item.id }}">{{ item.name }}</label>
+                                        </h4>
                                         {% if item.description %}
                                             <div class="product-description">
                                                 {{ item.description|localize|rich_text }}
