--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -167,7 +167,7 @@
                             {% blocktrans trimmed with time=ev.date_from|date:"TIME_FORMAT" %}
                                 Begin: {{ time }}
                             {% endblocktrans %}
-                            {% if event.settings.show_date_to %}
+                            {% if event.settings.show_date_to and ev.date_to %}
                                 <br>
                                 {% blocktrans trimmed with time=ev.date_to|date:"TIME_FORMAT" %}
                                     End: {{ time }}
