--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -217,8 +217,8 @@
                         {% endif %}
                         {% for item in tup.1 %}
                             {% if item.has_variations %}
-                                <div class="item-with-variations">
-                                    <div class="row-fluid product-row headline">
+                                <details class="item-with-variations" {% if event.settings.show_variations_expanded %}open{% endif %}>
+                                    <summary class="row-fluid product-row headline">
                                         <div class="col-md-8 col-xs-12">
                                             {% if item.picture %}
                                                 <a href="{{ item.picture.url }}" class="productpicture"
@@ -270,7 +270,7 @@
                                             {% endif %}
                                         </div>
                                         <div class="clearfix"></div>
-                                    </div>
+                                    </summary>
                                     <div class="variations {% if not event.settings.show_variations_expanded %}variations-collapsed{% endif %}">
                                         {% for var in item.available_variations %}
                                             <div class="row-fluid product-row variation">
@@ -348,7 +348,7 @@
                                             </div>
                                         {% endfor %}
                                     </div>
-                                </div>
+                                </details>
                             {% else %}
                                 <div class="row-fluid product-row simple">
                                     <div class="col-md-8 col-xs-12">
